<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="co.edu.udea.compumovil.gr02_20172.lab1.Principal"
    tools:showIn="@layout/app_bar_principal">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/layoutImagen_Informacion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintRight_toLeftOf="@+id/layoutNombres">

                <ImageView
                    android:id="@+id/imgFoto_Informacion"
                    android:layout_width="350px"
                    android:layout_height="250px"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/avatar" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layoutComponentesDos_Informacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutComponentesUno">


                <TextView
                    android:id="@+id/txtNombre_Informacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:inputType="textPersonName"
                    android:text="@string/nombre" />

                <TextView
                    android:id="@+id/txtApellido_Informacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:padding="8dp"
                    android:text="@string/apellido" />

                <LinearLayout
                    android:id="@+id/layoutGenero_Informacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:padding="8dp"
                    app:layout_constraintRight_toRightOf="parent">

                    <TextView
                        android:id="@+id/lblGenero_Informacion"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/genero_Registro" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbtnSexoMasculino_Informacion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:enabled="false"
                            android:text="@string/masculino" />

                        <RadioButton
                            android:id="@+id/rbtnSexoFemenino_Informacion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:enabled="false"
                            android:text="@string/femenino" />

                    </RadioGroup>

                </LinearLayout>


                <TextView
                    android:id="@+id/lblFechaNacimiento_Informacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/FechaNacimiento_Registro"
                    android:padding="8dp"/>

                <TextView
                    android:id="@+id/txtTelefono_Informacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@string/Telefono_Registro"
                    android:padding="8dp"/>

                <TextView
                    android:id="@+id/txtDireccion_Informacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:text="@string/Direccion_Registro"
                    android:padding="8dp"/>

                <TextView
                    android:id="@+id/txtEmail_Informacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@string/Email"
                    android:padding="8dp"/>

                <TextView
                    android:id="@+id/txtCiudad_Informacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:text="@string/ciudad"
                    android:padding="8dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
