<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="co.edu.udea.compumovil.gr02_20172.lab1.Registro">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutComponentesUno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="2"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/layoutImagen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    app:layout_constraintRight_toLeftOf="@+id/layoutNombres">

                    <ImageView
                        android:id="@+id/imgFoto"
                        android:layout_width="450px"
                        android:layout_height="450px"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/avatar" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutNombres"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/txtNombre_Registro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre"
                        android:inputType="textNoSuggestions|textVisiblePassword"
                        android:textColorHint="@color/colorPrimaryDLigth"/>

                    <EditText
                        android:id="@+id/txtApellido_Registro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/apellido"
                        android:inputType="textNoSuggestions|textVisiblePassword"
                        android:textColorHint="@color/colorPrimaryDLigth"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutComponentesDos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutComponentesUno">

                <LinearLayout
                    android:id="@+id/layoutGenero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:layout_editor_absoluteY="152dp">

                    <TextView
                        android:id="@+id/lblGenero_Registro"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/genero_Registro"/>

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbtnSexoMasculino_Registro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="onRadioButtonClicked"
                            app:buttonTint="@color/colorAccent"
                            android:text="@string/masculino" />

                        <RadioButton
                            android:id="@+id/rbtnSexoFemenino_Registro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="onRadioButtonClicked"
                            app:buttonTint="@color/colorAccent"
                            android:text="@string/femenino" />

                    </RadioGroup>

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/layoutFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <Button
                        android:id="@+id/btnFecha_Registro"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:onClick="onClick"
                        android:background="@color/colorAccent"
                        android:text="@string/FechaNacimiento_Registro" />

                    <TextView
                        android:id="@+id/lblFechaNacimiento_Registro"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="19dp"
                        android:layout_toEndOf="@+id/btnFecha_Registro"
                        android:text="@string/FechaNacimiento_Registro"
                        android:textAlignment="center"
                        />

                </RelativeLayout>

                <EditText
                    android:id="@+id/txtTelefono_Registro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Telefono_Registro"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="87dp"
                    tools:layout_editor_absoluteY="454dp"
                    android:textColorHint="@color/colorPrimaryDLigth"/>

                <EditText
                    android:id="@+id/txtDireccion_Registro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Direccion_Registro"
                    android:inputType="textNoSuggestions|textVisiblePassword"
                    tools:layout_editor_absoluteX="286dp"
                    tools:layout_editor_absoluteY="377dp"
                    android:textColorHint="@color/colorPrimaryDLigth"/>

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="508dp"
                    android:textColorHint="@color/colorPrimaryDLigth"/>

                <EditText
                    android:id="@+id/txtCiudad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ciudad"
                    android:inputType="textNoSuggestions"
                    tools:layout_editor_absoluteX="294dp"
                    tools:layout_editor_absoluteY="497dp"
                    android:textColorHint="@color/colorPrimaryDLigth"/>

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Constraseña"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorPrimaryDLigth"/>

                <EditText
                    android:id="@+id/txtPasswordRepeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ConstraseñaR"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorPrimaryDLigth"/>

            </LinearLayout>


            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:background="@color/colorAccent"
                android:onClick="onClick"
                android:text="@string/registrar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutComponentesDos"
                app:layout_constraintVertical_bias="0.089999974"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
